# LollipopMC

./: .gitattributes  .gitignore  CMakeLists.txt  landingwindow.cpp  landingwindow.h  landingwindow.ui  main.cpp
.github/workflows/: ci.yml
launcher/: main.cpp
launcher/include/: LoginWindow.hpp
launcher/src/: LoginWindow.cpp
